--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
 
 body {
     margin: 0;
-    height: 100%;
+    height: 100vh;
     font-family: var(--font-family);
 
     .p-accordion .p-accordion-content {
@@ -42,4 +42,16 @@ body {
     .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-link:focus {
         box-shadow: none;
     }
+
+    .p-tabview .p-tabview-nav li .p-tabview-nav-link {
+        // border: none;
+        border-radius: 0;
+    }
+    .p-tabview .p-tabview-nav li .p-tabview-nav-link:not(.p-disabled):focus {
+        box-shadow: inset 0 0.25rem 0 0 var(--tw-ring-color);
+    }
+    .p-tabview-nav li.p-highlight .p-tabview-nav-link {
+        box-shadow: inset 0 0.25rem 0 0 var(--tw-ring-color);
+    }
+    // }
 }
